@@ -31,36 +31,37 @@ package com.hpe.adm.nga.sdk.exception;
 import com.hpe.adm.nga.sdk.model.*;
 import com.hpe.adm.nga.sdk.unit_tests.common.CommonMethods;
 import com.hpe.adm.nga.sdk.unit_tests.common.CommonUtils;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.Set;
 
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-public class TestOctaneExceptions {
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+
+class TestOctaneExceptions {
 
 	private static FieldModel stringField;
 	private static FieldModel booleanField;
 	private static FieldModel longField;
 	private static Set<FieldModel> set;
-	
-	@BeforeClass
-	public static void beforeClass(){
+
+    @BeforeAll
+    static void beforeClass(){
 		stringField = new StringFieldModel("stringField", "value");
 		booleanField = new BooleanFieldModel("booleanField", true);
-		longField = new LongFieldModel("longField", new Long(5));
+		longField = new LongFieldModel("longField", Long.valueOf(5));
 		set = new HashSet<FieldModel>();
 		set.add(stringField);
 		set.add(booleanField);
 		set.add(longField);
 	}
-	
-	@Test 
-	public void testOctaneException(){
+
+    @Test
+    void octaneException(){
 		ErrorModel err = new ErrorModel(set);
 		OctaneException exc = new OctaneException(err);
 		
@@ -68,9 +69,9 @@ public class TestOctaneExceptions {
 		ErrorModel internalError = exc.getError();
 		assertTrue(checkEquivalence(internalError.getValues()));		
 	}
-	
-	@Test 
-	public void testOctanePartialException(){
+
+    @Test
+    void octanePartialException(){
 		Collection<ErrorModel> errorCol = new ArrayList<ErrorModel>();
 		Collection<EntityModel> entityCol = new ArrayList<EntityModel>();
 		errorCol.add(new ErrorModel(set));
